# screeenystu

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/desktop/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
apps/desktop/src/: app.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.mac.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: capture_manager.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: export.rs  manifest.rs  mod.rs  permissions.rs  project.rs  proxy.rs  recording.rs  share.rs  sources.rs  timeline.rs  zoom.rs
apps/desktop/src/components/canvas/: cursor-overlay.tsx  preview-canvas.tsx  title-card.tsx  webcam-overlay.tsx  window-frame.tsx
apps/desktop/src/components/export/: export-dialog.tsx
apps/desktop/src/components/inspector/: inspector-panel.tsx
apps/desktop/src/components/layout/: app-shell.tsx  permissions-wizard.tsx  sidebar.tsx  title-bar.tsx
apps/desktop/src/components/recording/: area-selector.tsx  camera-preview.tsx  recording-overlay.tsx  recording-setup.tsx
apps/desktop/src/components/settings/: settings-panel.tsx
apps/desktop/src/components/share/: quick-share.tsx
apps/desktop/src/components/timeline/: drop-zone.tsx  speed-track.tsx  timeline-panel.tsx  trim-handles.tsx  waveform-track.tsx  zoom-track.tsx
apps/desktop/src/components/ui/: button.tsx
apps/desktop/src/hooks/: use-auto-save.ts  use-shortcuts.ts  use-tauri-command.ts  use-undo-redo.ts
apps/desktop/src/stores/: canvas-store.ts  cursor-store.ts  intro-outro-store.ts  project-store.ts  recording-store.ts  settings-store.ts  share-store.ts  ui-store.ts  zoom-store.ts
apps/desktop/src/types/: index.ts
apps/share-api/: docker-compose.yml  package.json  tsconfig.json
apps/share-api/src/: index.ts  server.ts
apps/share-api/src/db/: client.ts
apps/share-api/src/db/migrations/: 001_initial.sql
apps/share-api/src/routes/: auth.ts  comments.ts  shares.ts  uploads.ts  viewer.ts
apps/share-api/src/services/: storage.ts
apps/share-api/src/types/: index.ts
crates/core-engine/: Cargo.toml
crates/core-engine/src/: command_stack.rs  lib.rs  timeline_ops.rs  zoom_analysis.rs
crates/export-engine/: Cargo.toml
crates/export-engine/src/: ffmpeg_pipeline.rs  filter_graph.rs  lib.rs  pipeline.rs  proxy.rs
crates/job-runner/: Cargo.toml
crates/job-runner/src/: queue.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: caption.rs  export.rs  interaction.rs  lib.rs  media.rs  project.rs  timeline.rs  version.rs  zoom.rs
native/swift-capture/: Info.plist  Package.swift  screencraft-capture.entitlements
native/swift-capture/Sources/CaptureApp/: CaptureApp.swift
native/swift-capture/Sources/SwiftCapture/: AudioDeviceManager.swift  BridgeTypes.swift  CameraRecorder.swift  CaptureEngine.swift  Exports.swift  InteractionTracker.swift  MicrophoneRecorder.swift  PermissionsManager.swift  ScreenEnumerator.swift
native/swift-capture/Tests/SwiftCaptureTests/: SwiftCaptureTests.swift
