[package]
name = "export-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Export pipeline for ScreenCraft video rendering"

[dependencies]
project-model = { path = "../project-model" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
