[package]
name = "job-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Background job queue for ScreenCraft"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
