[package]
name = "project-model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core data model types for ScreenCraft projects"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
