[package]
name = "screencraft-desktop"
version.workspace = true
edition.workspace = true
description = "ScreenCraft desktop application"
default-run = "screencraft-desktop"

[lib]
name = "screencraft_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
project-model = { path = "../../../crates/project-model" }
core-engine = { path = "../../../crates/core-engine" }
export-engine = { path = "../../../crates/export-engine" }
job-runner = { path = "../../../crates/job-runner" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
